--- a/settings.cfg
+++ b/settings.cfg
@@ -22,7 +22,8 @@ allyGreen = "0.0";
 allyBlue = "1.0";
 allyAlpha = "0.6";
 //settings
-bone = "7"; //7 chest, 8 head
-fov = "5";
+bone = "8"; //7 chest, 8 head
+fov = "3";
 flash_max = "100";
+aim_smooth_percent = "0.02"; //0.02 seems pretty legit. any slower cant trace a running player at range properly.
 
