fix acquiring target logic

--- a/settings.cfg
+++ b/settings.cfg
@@ -23,7 +23,6 @@ allyBlue = "1.0";
 allyAlpha = "0.6";
 //settings
 bone = "8"; //7 chest, 8 head
-fov = "5";
+fov = "10";
 flash_max = "100";
-aim_smooth_percent = "0.04"; //0.03 seems pretty legit. any slower cant trace a running player at range properly.
-
+aim_smooth_percent = "1";
