--- a/settings-example.cfg
+++ b/settings-example.cfg
@@ -24,5 +24,6 @@ allyAlpha = "0.6";
 //settings
 bone = "8"; //7 chest, 8 head
 fov = "3";
-flash_max = "100";
-aim_smooth_percent = "0.04";
+flash_max = "100"; //255 for full flash,0 for no flash
+aim_smooth_percent = ".05";//1 for no smoothing, 0 for infinite smoothing (don't do this)
+custom_fov = "90"; //0 for default fov
