--- a/become-a-pro.cbp
+++ b/become-a-pro.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="MultiHackCsgo" />
+		<Option title="become-a-pro" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/MultiHackCsgo" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/become-a-pro" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -21,7 +21,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/MultiHackCsgo" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/become-a-pro" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
