update some settings

--- a/settings-example.cfg
+++ b/settings-example.cfg
@@ -23,7 +23,8 @@ allyBlue = "1.0";
 allyAlpha = "0.6";
 //settings
 bone = "8"; //7 chest, 8 head
-fov = "3";
-flash_max = "100"; //255 for full flash,0 for no flash
-aim_smooth_percent = ".05";//1 for no smoothing, 0 for infinite smoothing (don't do this)
+fov = "3"; //aimbot targeting fov
+flash_max = "100"; //0(no flash) to 100(full flash)
+aim_smooth = "5";//0(infinitely smooth) to 100(least smooth)
 custom_fov = "90"; //0 for default fov
+no_hands = "1"; //1 = enable, 0 = disable
