update old patterns and fix cheat

--- a/settings-example.cfg
+++ b/settings-example.cfg
@@ -7,9 +7,9 @@ ToggleNoFlash = "Delete";
 ToggleRage = "Insert"
 
 // ESP colors
-enemyRed = "1.0";
-enemyGreen = "0.0";
-enemyBlue = "0.0";
+enemyRed = "0.878431";
+enemyGreen = "0.686275";
+enemyBlue = "0.337255";
 enemyAlpha = ".6";
 
 enemyInCrosshairRed = "1.0";
@@ -17,14 +17,16 @@ enemyInCrosshairGreen = "0.45";
 enemyInCrosshairBlue = "0.0";
 enemyInCrosshairAlpha = "1.0";
 
-allyRed = "0.0";
-allyGreen = "0.0";
-allyBlue = "1.0";
+allyRed = "0.447059";
+allyGreen = "0.607843";
+allyBlue = "0.866667";
 allyAlpha = "0.6";
 //settings
-bone = "8"; //7 chest, 8 head
-fov = "3"; //aimbot targeting fov
-flash_max = "100"; //0(no flash) to 100(full flash)
-aim_smooth = "5";//0(infinitely smooth) to 100(least smooth)
+bone = "8"; //7 chest, 8 head (does nothing rn)
+fov = "35"; //aimbot targeting fov
+flash_max = "30"; //0(no flash) to 100(full flash)
+aim_smooth = ".2";//maximum aim step distance, higher is less smooth
 custom_fov = "90"; //0 for default fov
 no_hands = "1"; //1 = enable, 0 = disable
+shoot_friends = "1";
+
