--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(become-a-pro VERSION 0.0.0)
 
 include(CTest)
 enable_testing()
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -g -std=c++14 -Wall")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -std=c++14 -Wall")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG -std=c++14")
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
