fix example cfg file

--- a/settings-example.cfg
+++ b/settings-example.cfg
@@ -25,8 +25,17 @@ allyAlpha = "0.6";
 bone = "8"; //7 chest, 8 head (does nothing rn)
 fov = "35"; //aimbot targeting fov
 flash_max = "30"; //0(no flash) to 100(full flash)
-aim_smooth = ".2";//maximum aim step distance, higher is less smooth
+aim_smooth = ".2";//maximum aim step distance
 custom_fov = "90"; //0 for default fov
 no_hands = "1"; //1 = enable, 0 = disable
 shoot_friends = "1";
-
+//offsets
+m_pStudioBones = "0x2C70"; //unsigned long long m_pStudioBones;
+m_flLowerBodyYawTarget = "0x42C8"; //float m_flLowerBodyYawTarget; // 0x42C8
+m_dwViewMatrix = "0x2537374"; //4x4 float matrix //2537334 and 2553C14 on Aug-7-17
+m_lifeState = "0x293"; //int m_lifeState; // 0x293
+m_bIsDefusing = "0x416C";//unsigned char m_bIsDefusing; // 0x416C
+m_bIsScoped = "0x4164";//unsigned char m_bIsScoped; // 0x4164
+m_bGunGameImmunity = "0x4178";   	//unsigned char m_bGunGameImmunity; // 0x4178
+m_iShotsFired = "0xABB0";    	//int m_iShotsFired; // 0xABB0
+m_aimPunchAngle = "0x3764";    	//Vector m_aimPunchAngle; // 0x3764
